[package]
name = "rust-lexer"
version = "0.1.0"
authors = ["Guy Bedford <guybedford@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["serde"]
wasm = ["wasm-bindgen", "serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"], optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
