[package]
name = "es_module_lexer"
version = "0.1.0"
authors = ["Guy Bedford <guybedford@gmail.com>", "Vova Guguiev <vladimir.guguiev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["serde"]
wasm = ["wasm-bindgen", "js-sys"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"], optional = true }
js-sys = { version = "0.3.47", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
